--- a/MyShop.WebUI/Views/ProductCategory/Delete.cshtml
+++ b/MyShop.WebUI/Views/ProductCategory/Delete.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.createdAt)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.createdAt)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Category)
         </dt>
 
